[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansio>=0.0.2",
    "click>=8.3.1",
    "flask>=3.1.2",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "pytz>=2025.2",
    "six>=1.17.0",
    "sqlalchemy>=2.0.44",
    "werkzeug>=3.1.3",
]
